# authgent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  demo.py  demo.sh  demo_showcase.py  docker-compose.yml  publish.sh  publish_npm.sh  record_demo.sh
.github/workflows/: ci.yml  deploy-playground.yml
docs/: DIAGRAMS.md  NOVICE.md
docs/assets/: demo.cast
docs/internal/: ARCHITECTURE_REVIEW.md  LANGUAGE_AGNOSTIC_ANALYSIS.md  LAUNCH_STRATEGY.md  PRD.md  PRD_PART2.md  RESEARCH.md
examples/: README.md
examples/crewai/: README.md  crewai_demo.py
examples/fastapi_protected/: README.md  after.py  before.py
examples/langchain_tool/: README.md  langchain_agent.py
examples/mcp_server/: README.md  mcp_client_demo.py  mcp_server.py
examples/openai_agents/: README.md  openai_agents_demo.py
examples/openclaw/: README.md  demo_openclaw_authgent.py
examples/pipeline/: README.md  run_pipeline.py  setup_agents.py
examples/quickstart/: README.md  demo.py
playground/: index.html
playground/deploy/: Dockerfile.playground  nginx-docker.conf  nginx.conf  setup.sh
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/authgent/: __init__.py  client.py  delegation.py  dpop.py  errors.py  jwks.py  models.py  verify.py
sdks/python/authgent/adapters/: __init__.py  langchain.py  mcp.py  protected_resource.py
sdks/python/authgent/middleware/: __init__.py  fastapi.py  flask.py  scope_challenge.py
sdks/python/tests/: test_client.py  test_delegation.py  test_dpop.py  test_errors.py  test_models.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdks/typescript/src/: client.ts  (+8 more)
server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/authgent_server/: __init__.py  app.py  cli.py  config.py  crypto.py  db.py  dependencies.py  errors.py  logging.py  utils.py
server/authgent_server/endpoints/: __init__.py  agents.py  audit.py  authorize.py  device.py  health.py  introspect.py  register.py  revoke.py  stepup.py  token.py  token_check.py  token_inspect.py  wellknown.py
server/authgent_server/middleware/: __init__.py  cors.py  error_handler.py  rate_limit.py  request_id.py  sanitize.py
server/authgent_server/models/: __init__.py  agent.py  audit_log.py  authorization_code.py  base.py  consent.py  delegation_receipt.py  device_code.py  oauth_client.py  refresh_token.py  signing_key.py  stepup_request.py  token_blocklist.py  user.py
server/authgent_server/providers/: __init__.py  attestation.py  events.py  hitl.py  keys.py  policy.py  protocols.py
server/authgent_server/schemas/: agent.py  client.py  common.py  token.py
server/authgent_server/services/: __init__.py  agent_service.py  audit_service.py  client_service.py  consent_service.py  delegation_service.py  dpop_service.py  external_oidc.py  jwks_service.py  stepup_service.py  token_service.py
server/authgent_server/templates/: consent.html
server/migrations/: alembic.ini  env.py
server/migrations/versions/: 001_initial_schema.py
server/tests/: adversarial_live_test.py  agent_to_agent_simulation.py  conftest.py  live_discovery_simulation.py  simulation_test.py  test_agent_discovery.py  test_agents.py  test_audit_endpoint.py  test_authorize.py  test_cli_phase0.py  test_crypto.py  test_delegation.py  test_device.py  test_dpop.py  test_dpop_integration.py  test_error_handler.py  test_external_oidc.py  test_health.py  test_hitl_provider.py  test_integration_workflows.py  test_introspect.py  test_log_redaction.py  test_real_world_agents.py  test_register.py  test_registration_policy.py  test_revoke.py  test_security.py  test_stepup.py  test_token.py  test_token_advanced.py  test_token_check.py  test_token_expiry.py  test_token_inspect.py  test_wellknown.py
(+17 files in other folders)
