[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authgent-server"
version = "0.1.0"
description = "The open-source identity provider for AI agents — OAuth 2.1 Authorization Server"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Dhruv Agnihotri" },
]
keywords = ["oauth", "agent", "mcp", "identity", "auth", "a2a", "delegation", "dpop", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "cryptography>=43.0.0",
    "PyJWT>=2.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "python-ulid>=2.7.0",
    "bcrypt>=4.2.0",
    "structlog>=24.4.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "coverage>=7.6.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "freezegun>=1.4.0",
]
migrations = ["alembic>=1.13.0"]

[project.urls]
Homepage = "https://github.com/authgent/authgent"
Documentation = "https://github.com/authgent/authgent/tree/main/server"
Repository = "https://github.com/authgent/authgent"
Changelog = "https://github.com/authgent/authgent/blob/main/CHANGELOG.md"
Issues = "https://github.com/authgent/authgent/issues"

[project.scripts]
authgent-server = "authgent_server.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["authgent_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
