[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authgent"
version = "0.1.0"
description = "Python SDK for authgent — token validation, delegation chains, DPoP, middleware"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Dhruv Agnihotri" },
]
keywords = ["oauth", "agent", "mcp", "identity", "auth", "a2a", "delegation", "dpop", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "PyJWT>=2.9.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.0"]
flask = ["flask>=3.0.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/authgent/authgent"
Documentation = "https://github.com/authgent/authgent/tree/main/sdks/python"
Repository = "https://github.com/authgent/authgent"
Changelog = "https://github.com/authgent/authgent/blob/main/CHANGELOG.md"
Issues = "https://github.com/authgent/authgent/issues"

[tool.hatch.build.targets.wheel]
packages = ["authgent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
